# lahar-text-editor

./: .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  clang-renaming-script-bash.sh
shaders/: frag.slang  text_frag.slang  text_vert.slang  ui_frag.slang  ui_vert.slang
src/: 2DEngine.cppm  3DEngine.cppm  InputHandler.cppm  ModelLoader.cppm  PieceTable.cppm  SDL_Wrapper.cppm  SceneBuilder.cppm  TextEditor.cppm  TextSystem.cppm  TextView.cppm  TextWidget.cppm  TextureStore.cppm  UISystem.cppm  VulkanDevice.cppm  VulkanInstance.cppm  VulkanPipeline.cppm  VulkanWindow.cppm  app.cppm  extra.cppm  imgui.cppm  macros.hpp  main.cpp  memory_types.cppm  mesh.cppm  scene.cppm  text.cppm  texture.cppm  types.cppm  ui.cppm  utils.cppm
